# vits_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/espeak-ng/: speak_lib.h
libs/: .gitignore  libespeak-ng.lib
